윈도우에서 작업 종료

--- a/menu.html
+++ b/menu.html
@@ -19,6 +19,7 @@
         <button class="menu-btn" onclick="goPage('register.html')">신규/재등록</button>
         <button class="menu-btn" onclick="goPage('sign.html')">수업 완료 서명하기</button>
         <button class="menu-btn" onclick="goPage('schedule.html')">수업 예약 / 취소</button>
+        <button class="menu-btn" onclick="location.href='https://forms.gle/tJMZ3sERC2HDFbLe6';">플로어 등록</button>
         <button class="menu-btn" onclick="goPage('off.html')">OFF 스케줄</button>
 
         <button class="logout-btn" onclick="logout()">로그아웃</button>
